--- a/Ansible.yml
+++ b/Ansible.yml
@@ -1,5 +1,7 @@
-- name: Ensure that the existing certificate is still valid 2 weeks (1209600 seconds) from now
-  openssl_certificate:
+--- 
+- 
+  name: "Ensure that the existing certificate is still valid 2 weeks (1209600 seconds) from now"
+  openssl_certificate: 
     path: /etc/haproxy/ssl/www.discovertravelshop.com.au.cer
     provider: assertonly
     valid_in: 1209600
